# hfi-utility-center-backend

./: .gitignore  CustomPDO.php  CustomPDOStatement.php  README.md  accept.php  add_announcement.php  addres.php  adminSearch.php  admin_emails.php  app.py  approval_action.php  clean.php  cos_preview_url_gen.php  delete_announcement.php  doc.md  doc2.md  doc3.md  doc4.md  doc5.md  draft.md  edit_announcement.php  enableClassroom.php  error_dashboard.html  fetchPolicy.php  fetch_clues.php  fetch_lnf.php  getDisabledClassroomDetails.php  getHellVisits.php  get_announcements.php  get_error_logs.php  get_error_stats.php  get_oplog.php  get_repair.php  getrequests.php  global_error_handler.php  inquiry.php  inquiry_repair.php  keygen.php  login.php  migrate.py  (+25 more)
core/: __init__.py  classes.py  email.py  env.py  orm.py  schedulers.py  types.py  utils.py
panels/: booking_management.html
pytest/: test_api.py
src/: Sts.php  cos-sdk-v5-7.phar
